--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     </header>
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
-    <span>
+    <nav>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
-    </span>
+    </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
+    </main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <div>
