--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     </main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <section>
-      </section>
+      <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
         <div>
