Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section></section>
+      <section></section>
+      <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
         <div>
