--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
-        <div>
+        <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <span>"An Exceptional Living Room" by Leonardo DaVinci, photograph</span>
-        </div>
+          <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+        </figure>
 
         <!-- Turn this div into an article tag-->
         <div>
