--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
-        <section></section>
+        <section>
          <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
           <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
         </figure>
-
+        </section>
         <!-- Turn this div into an article tag-->
         <div>
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
