Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section></section>
-      <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
         <section>
@@ -41,7 +40,7 @@
         </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      <section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
@@ -54,7 +53,7 @@
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <span>Exceptional Promotional Video - Source: archive.org</span>
         </div>
-      </div>
+      </section>
 
       <!-- Replace this div with a third section tag -->
       <div>
