--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
     <main>
-    </main>
+    
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <section></section>
 
         <!-- Wrap the nested img in a figure tag-->
         <section>
@@ -56,7 +55,7 @@
       </section>
 
       <!-- Replace this div with a third section tag -->
-      <div>
+      <section>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -70,8 +69,8 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </div>
-    </div>
+      </section>
+    </main>
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
